objects/Account.object
<CustomObject>
    <fields>
        <fullName>Access_Code_Expiration__c</fullName>
        <label>Access Code Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__BankRoutingNumber__c</fullName>
        <label>Bank Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Number_Text__c</fullName>
        <label>Bank Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Number__c</fullName>
        <label>Bank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Transit_Number__c</fullName>
        <label>Bank Transit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Management_Fee_Per__c</fullName>
        <label>Management Fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Primary_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Transit_Number__c</fullName>
        <label>Transit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Backend_Fees__c</fullName>
        <label>Backend Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Broker_Commissions__c</fullName>
        <label>Broker Commissions</label>
        <picklist>
            <picklistValues>
                <fullName>50% split - 10% max on recurring payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% split - 10% on recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_DBA_Address__c</fullName>
        <label>Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_Legal_Corporate_Name__c</fullName>
        <label>Legal/Corporate Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_Start_Date__c</fullName>
        <label>Business Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Client_Age__c</fullName>
        <formula>(Today()- DATEVALUE(CreatedDate))/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Contract_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Date_Account_Opened_Bank_Info__c</fullName>
        <label>Date Account Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Fax_Bank_Info__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Federal_Tax_Id__c</fullName>
        <label>Federal Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Individual_Identification_Number__c</fullName>
        <label>Individual Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Payment_Processor__c</fullName>
        <globalPicklist>Cloufi__Payment_Processor</globalPicklist>
        <label>Payment Processor</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Phone_Bank_Info__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__SP_Fee__c</fullName>
        <label>Syndication Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Separate_Payroll_Account__c</fullName>
        <label>Separate Payroll Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Syndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi__Title__c</fullName>
        <label>Title Banking Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Trust_Level__c</fullName>
        <label>Trust Level</label>
        <picklist>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Type_Of_Account__c</fullName>
        <label>Type Of Account</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Upfront_Fees__c</fullName>
        <label>Upfront Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Business_Countries</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</inlineHelpText>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <inlineHelpText>Time stamp of when the last Disposition was clicked</inlineHelpText>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <inlineHelpText>Name of the Call Campaign the record was last called from</inlineHelpText>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <inlineHelpText>Name of the last Disposition clicked</inlineHelpText>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <inlineHelpText>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</inlineHelpText>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <inlineHelpText>Total number of calls made on this record</inlineHelpText>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligibility_Per__c</fullName>
        <label>Renewal Eligibility %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Syndication_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndication Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Cloufi__Payment_Processor__c</columns>
        <columns>CloufiServicing__Primary_Lender__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Cloufi__Lender</fullName>
        <active>true</active>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloufi__Merchant</fullName>
        <active>true</active>
        <label>Merchant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloufi__Referral_Partner</fullName>
        <active>true</active>
        <label>Referral Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISO</fullName>
        <active>true</active>
        <label>ISO</label>
    </recordTypes>
    <recordTypes>
        <fullName>White_Label</fullName>
        <active>true</active>
        <label>White Label</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>